# inexplicable_engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Geom.txt  License.txt  README.md  TODO.txt  _inex_.workspace  _inex_.workspace.layout  links_and_stuff.txt  memalloc.txt  ogl.txt  shell.nix  useful_commands.txt  заповеди.txt
.github/ISSUE_TEMPLATE/: faq.md
cmake_modules/: FindALUT.cmake  FindOpenGL.cmake
inex/: c_array_functions.h  command_line.h  construction.h  extensions.h  fs_utils.h  inex.cppcheck  library_dependencies.h  macro_compiler.h  macro_debug.h  macro_declarations.h  macro_extensions.h  macro_log.h  macro_platform.h  macro_string.h  macro_unreferenced_parameter.h  macros.h  math_color.h  math_constants.h  math_float2.h  math_float2_inline.h  math_float3.h  math_float3_inline.h  math_float4x4.h  math_functions.h  math_matrix2.h  math_matrix2_inline.h  memory_extensions.h  memory_fixed_size_allocator.h  monitoring.h  os_extensions.h  os_include.h  os_linux.h  os_windows.h  resources.h  static_cast_checked.h  stl_extensions.h  stl_extensions_inline.h  stl_extensions_vector.h  strings_functions.h  tasks_packaged_task.h  (+10 more)
inex/core/: api.h  core.h  engine.h  ie_core.h
inex/core/sources/: CMakeLists.txt  RpcExStackTraceEngine.cpp  RpcExStackTraceEngine.h  build_extensions.cpp  build_extensions.h  command_line.cpp  core.vcxproj.filters  core_entry_point.cpp  cpuid_internal.cpp  cpuid_internal.h  cpuid_linux.cpp  cpuid_win.cpp  cpuid_win32.cpp  encryption.cpp  encryption.h  format_specifier.cpp  fs_catalog_operations_linux_impl.h  fs_catalog_operations_win_impl.h  fs_directory_entry.h  fs_directory_entry_inline.h  fs_directory_iterators.cpp  fs_directory_iterators.h  fs_directory_iterators_inline.h  fs_file_system.cpp  fs_file_system.h  fs_file_system_internal.cpp  fs_file_system_internal.h  fs_ini_file.cpp  fs_ini_file.h  fs_manager.h  fs_path_string.h  fs_path_string_inline.h  fs_read_write.h  fs_read_write_linux.cpp  fs_read_write_win.cpp  ie_core.cpp  ie_debug.cpp  ie_debug.h  ie_debug_linux.cpp  ie_debug_win.cpp  (+38 more)
inex/engine/: api.h  engine_user.h  ie_engine.h  library_dependencies.h
inex/engine/sources/: CMakeLists.txt  build_id_computer.cpp  build_id_computer.h  engine_device.cpp  engine_device.h  engine_entry_point.cpp  engine_linux_entry_point.cpp  engine_memory.h  engine_win_entry_point.cpp  engine_world.cpp  engine_world.h  engine_world_linux.cpp  engine_world_logic.cpp  engine_world_win.cpp  fragment_shader  fragment_shader.glsl  ie_engine.cpp  library_loader.h  main.cpp  ogl.cpp  ogl.h  pch.h  stdafx.h  vertex_shader.glsl
inex/engine/sources/gamedata/: System.ltx
inex/engine/sources/gamedata/shaders/: calc_color.fs  fragment_shader.glsl
inex/game/: game_module_proxy.h
inex/game/pc/sources/: CMakeLists.txt  ReadMe.txt  Resource.h  game_pc  game_pc.cbp  game_pc.depend  game_pc.layout  game_pc.rc  game_pc.vcxproj  game_pc.vcxproj.filters  game_pc_application.cpp  game_pc_application.h  game_pc_application_linux.cpp  game_pc_application_win.cpp  game_pc_entry_point — копия.cpp  game_pc_entry_point.cpp  game_pc_entry_point_linux.cpp  game_pc_entry_point_win.cpp  game_pc_linux  pch.cpp  pch.h  testing_shared
inex/game/pc/sources/gamedata/: System.ltx
inex/game/pc/sources/gamedata/shaders/: ManualPerspective.vs  OrthoWithOffset.vs  StandardColors.fs  calc_color.fs  calc_offset.vs  ogl4.fs  ogl4.vs  position_offset.vs  vertex_shader.glsl
inex/inex-cppcheck-build-dir/: RpcExStackTraceEngine.a1  RpcExStackTraceEngine.a2  RpcExStackTraceEngine.a3  RpcExStackTraceEngine.a4  build_extensions.a1  build_extensions.a2  build_extensions.a3  build_extensions.a4  command_line.a1  command_line.a2  command_line.a3  command_line.a4  command_processor.a1  command_processor.a2  command_processor.a3  command_processor.a4  core_entry_point.a1  core_entry_point.a2  core_entry_point.a3  core_entry_point.a4  cpuid_internal.a1  cpuid_internal.a2  cpuid_internal.a3  cpuid_internal.a4  dllmain.a1  dllmain.a10  dllmain.a11  dllmain.a12  dllmain.a2  dllmain.a3  dllmain.a4  dllmain.a5  dllmain.a6  dllmain.a7  dllmain.a8  dllmain.a9  encryption.a1  encryption.a2  encryption.a3  encryption.a4  (+211 more)
inex/logging/: format_specifier.h
inex/render/: api.h  library_linkage.h  world.h
inex/render/base/: api.h  base_classes.h  engine_renderer.h  engine_wrapper.h  extended_renderer.h  game_renderer.h  platform.h  visual.h  world.h
inex/render/base/sources/: CMakeLists.txt  NO_CAMSPEED_BUG.TXT  ReadMe.txt  command_processor.cpp  command_processor.h  engine_renderer.cpp  engine_renderer.h  game_renderer.cpp  game_renderer.h  pch.cpp  pch.h  platform_api.h  platform_api_pc.cpp  platform_gl4.cpp  platform_gl4.h  platform_gl4_inline.h  render_base.cbp  render_base.cpp  render_base.layout  render_base.vcxproj  render_base.vcxproj.filters  render_base_entry_point.cpp  render_base_world.cpp
inex/render/common/: render_model.h  renderer.h  scene.h  scene_view.h  stage.h  stage_gbuffer.h
inex/render/core/: device.h  device_base_gl4.h  model.h  quasi_singleton.h  resource_intrusive_base.h  shaders.h  vertex_colored.h
inex/render/facade/: render_stage_type.h
inex/render/gl4/sources/: CMakeLists.txt  ReadMe.txt  cpp.hint  gl4_entry_point.cpp  gl4_external.cpp  model_manager.cpp  model_manager.h  pch.cpp  pch.h  render_gl4.cbp  render_gl4.layout  render_gl4.vcxproj  render_gl4.vcxproj.filters  render_ogl3.cpp  render_ogl3.vcxproj.filters  render_stage_type.h  renderer_context.cpp  renderer_context.h  scene_context.cpp  scene_context.h  scene_render.h  stage.cpp  stage.h  system_render.cpp  visual.cpp  visual.h
inex/rust_in_cpp/: Cargo.toml
inex/sound/: api.h  library_linkage.h  sound.h  sound_file.h  sound_object.h
inex/sound/sources/: CMakeLists.txt  ReadMe.txt  pch.cpp  pch.h  sound.cpp  sound.vcxproj  sound.vcxproj.filters  sound_file.cpp  sound_object.cpp  sound_object.h
inex/ui/: api.h  library_linkage.h  ui.h
inex/ui/sources/: CMakeLists.txt  pch.cpp  pch.h  ui.cpp  ui.vcxproj  ui.vcxproj.filters  window_wrapper_base_win.cpp  window_wrapper_base_win.h
(+51 files in other folders)
